// $Id$

6.x-1.x-dev
===========


6.x-1.0
=======

- Initial checkin.
- Added advanced_help support.
- Change CSS class used for fluid grid container to just views-fluid-grid.
- Optimize hook_init() and template preprocess a little.
- Added translation template.